<resources>
    <string name="app_name">烂笔头</string>

    <string name="navigation_drawer_open">打开导航抽屉</string>
    <string name="navigation_drawer_close">关闭导航抽屉</string>

    <string name="action_settings">设置</string>

    <!-- Activity Title -->
    <string name="title_activity_pattern_init">设置图案密码</string>
    <string name="title_activity_password_edit_mode">选择编辑模式</string>
    <string name="title_activity_website_edit">添加网站</string>
    <string name="title_activity_server_edit">添加服务器</string>
    <string name="title_activity_wifi_edit">添加Wifi</string>
    <string name="title_activity_wifi_list">Wifi列表</string>
    <string name="title_activity_pass_edit">添加密码</string>
    <string name="title_activity_pass_label">标签</string>

    <!-- TextView -->
    <string name="tv_pattern_init_tips">绘制解锁图案</string>
    <string name="tv_pattern_init_again">再次绘制解锁图案</string>
    <string name="tv_pass_server_ip">服务器地址：</string>
    <string name="tv_pass_server_port">端口号：</string>
    <string name="tv_pass_server_ipwithport">&gt; 服务器信息：</string>
    <string name="tv_pass_server_account">&gt; 用户名：</string>
    <string name="tv_pass_server_pass">&gt; 密码：</string>
    <string name="tv_pass_server_remark">&gt; 备注：</string>
    <string name="tv_pass_server_update_time">&gt; 更新时间：</string>
    <string name="tv_pass_server_create_time">&gt; 创建时间：</string>
    <string name="tv_item_pass_server_pass">&gt; 密码：_</string>
    <string name="tv_update_time">更新时间：</string>

    <!-- Hint -->
    <string name="hint_pass_edit_title">标题</string>
    <string name="hint_pass_edit_account">账号/登录信息</string>
    <string name="hint_pass_edit_password">密码</string>
    <string name="hint_website_edit_url">网站地址</string>
    <string name="hint_pass_edit_remark">备注</string>
    <string name="hint_server_edit_address">服务器地址</string>
    <string name="hint_server_edit_port">端口号</string>
    <string name="hint_wifi_edit_name">Wifi名称</string>
    <string name="hint_wifi_edit_router_addr">路由器登录地址</string>
    <string name="hint_wifi_edit_router_password">路由器登录密码</string>
    <string name="hint_wifi_edit_operators_account">运营商账号</string>
    <string name="hint_wifi_edit_operators_password">运营商密码</string>
    <string name="hint_label_name">标签名称</string>

    <!-- Default Text-->
    <string name="header_website">https://</string>
    <string name="default_remark">未填写备注</string>

    <!-- Button -->
    <string name="btn_pattern_init_continue">继续</string>
    <string name="btn_pattern_init_reset">清除</string>
    <string name="btn_pattern_init_ensure">确认</string>
    <string name="btn_label_create">创建标签</string>
    <string name="btn_copy">复制</string>

    <!--Menu Action-->
    <string name="action_menu_skip">SKIP</string>
    <string name="action_menu_label">LABEL</string>
    <string name="action_menu_edit">EDIT</string>
    <string name="action_menu_delete">DELETE</string>

    <!-- Time Interval -->
    <string name="interval_just_now">刚刚</string>
    <string name="interval_second">秒前</string>
    <string name="interval_minute">分钟前</string>
    <string name="interval_hour">小时前</string>

    <!--ErrorMsg-->
    <string name="error_pattern_create_empty">密码不能为空</string>
    <string name="error_pattern_create_exists">主密码已经设置，无需重复添加</string>
    <string name="error_title_cannot_empty">标题不能为空</string>
    <string name="error_account_cannot_empty">账户不能为空</string>
    <string name="error_password_cannot_empty">密码不能为空</string>
    <string name="error_server_address_illegal">非法的服务器地址</string>
    <string name="error_server_port_illegal">非法端口号</string>
    <string name="error_unknown_exception_happened">抱歉，发生未知异常</string>
    <string name="error_invalid_pagesize">非法的页面大小</string>
    <string name="error_invalid_pageno">非法的页码</string>
    <string name="error_load_failed">加载数据失败</string>
    <string name="error_label_name_cannot_empty">标签名称不能为空</string>
    <string name="error_label_name_exists">标签已存在</string>
    <string name="error_cannot_query_from_null">无法从空条件开始查询</string>
    <string name="error_cannot_update_null">无法更新空对象</string>
    <string name="error_query_failed">查询失败</string>
    <string name="error_calculate_interval">计算错误</string>
    <string name="error_cannot_delete_null">无法删除空对象</string>

    <!--Dialog Title-->
    <string name="title_dialog_tips">温馨提示</string>

    <!--Dialog Message-->
    <string name="msg_dialog_pass_edit_empty">系统检测到编辑了某些条目，但编辑不完整，确认要放弃编辑吗？</string>
    <string name="msg_dialog_pass_delete_single">确认要删除这条数据吗？操作不可恢复</string>

    <!--Dialog Button-->
    <string name="action_dialog_ok">确定</string>
    <string name="action_dialog_cancel">取消</string>
    <string name="action_dialog_giveup_edit">放弃编辑</string>
    <string name="action_dialog_return_to_edit">返回修改</string>

    <!--CheckBox-->
    <string name="cb_never_show_again">下次不再显示</string>

    <!--SuccessMsg-->
    <string name="success_pass_create">创建密码成功</string>
    <string name="success_pass_update">更新密码成功</string>
    <string name="success_copy">复制成功</string>

    <!--Label-->
    <string name="label_fab_password">密码</string>
    <string name="label_fab_note">笔记</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Array-->
    <string-array name="tab_main">
        <item>密码</item>
    </string-array>
    <string-array name="mode_password">
        <item>网站</item>
        <item>银行卡</item>
        <item>服务器</item>
        <item>Wifi</item>
    </string-array>

</resources>
